juego con limites y bloques

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -264,6 +264,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "efa23c53": {
+          "id": "efa23c53",
+          "path": "img/zelda.png",
+          "output": "img/zelda.png",
+          "name": "zelda.png",
+          "category": "IMAGE",
+          "size": 6657,
+          "type": "png",
+          "initialSize": 6657,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
